--- a/recipes/lemon-pepper-salmon.html
+++ b/recipes/lemon-pepper-salmon.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="./recipes/lemon-pepper-salmon.html">Lemon Pepper Salmon</a>
+    <h1>Lemon Pepper Salmon</h1>
+    <a href="../index.html">Home</a>
 </body>
 </html>
