--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lemon-pepper-salmon.html">Lemon Pepper Salmon</a>
+    <ul>
+        <li><a href="./recipes/lemon-pepper-salmon.html">Lemon Pepper Salmon</a></li>
+        <li>Kraut Balls</li>
+        <li>Cajun Chicken Alfredo</li>
+    </ul>
 </body>
 </html>
