--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="./recipes/lemon-pepper-salmon.html">Lemon Pepper Salmon</a></li>
-        <li>Kraut Balls</li>
-        <li>Cajun Chicken Alfredo</li>
+        <li><a href="./recipes/kraut-balls.html">Kraut Balls</a></li>
+        <li><a href="./recipes/cajun-chicken-alfredo.html">Cajun Chicken Alfredo</a></li>
     </ul>
 </body>
 </html>
