--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Courtney's Recipe Vault!</h1>
     <ul>
         <li><a href="./recipes/lemon-pepper-salmon.html">Lemon Pepper Salmon</a></li>
-        <li><a href="./recipes/kraut-balls.html">Kraut Balls</a></li>
-        <li><a href="./recipes/cajun-chicken-alfredo.html">Cajun Chicken Alfredo</a></li>
+        <li><a href="./recipes/kraut-balls.html">Kraut Balls (No recipe in here...)</a></li>
+        <li><a href="./recipes/cajun-chicken-alfredo.html">Cajun Chicken Alfredo (No recipe in here...)</a></li>
     </ul>
 </body>
 </html>
