--- a/recipes/lemon-pepper-salmon.html
+++ b/recipes/lemon-pepper-salmon.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -9,7 +10,7 @@
     <a href="../index.html">Home</a>
     <img src="./images/lemon-pepper-salmon.jpg" alt="A photo of two finished lemon pepper salmon fillets." width="569" height="853">
     <h2>Description</h2>
-    <p>Salmon with lemon and pepper. I like this quite a bit! If salmon were cheaper- and we went to the store on a more regular basis- I'd have this weekly.</p>
+    <p>Salmon with lemon and pepper. I like this quite a bit! If salmon were cheaper- and we went to the store on a more regular basis- I'd have this far more often!</p>
     <h3>Ingredients</h3>
     <ul>
         <li>Salmon Fillet</li>
