--- a/recipes/lemon-pepper-salmon.html
+++ b/recipes/lemon-pepper-salmon.html
@@ -8,7 +8,7 @@
 <body>
     <h1>Lemon Pepper Salmon</h1>
     <a href="../index.html">Home</a>
-    <img src="./images/lemon-pepper-salmon.jpg" alt="A photo of two finished lemon pepper salmon fillets." width="569" height="853">
+    <img src="./images/lemon-pepper-salmon.jpg" alt="A photo of two finished lemon pepper salmon fillets." width=25% height=25%>
     <h2>Description</h2>
     <p>Salmon with lemon and pepper. I like this quite a bit! If salmon were cheaper- and we went to the store on a more regular basis- I'd have this far more often!</p>
     <h3>Ingredients</h3>
